<resources>
    <string name="app_name">Gaarb</string>
    <string name="gaarb">Gaarb.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign UP</string>
    <string name="back">back</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="sell_garbage">Sell Garbage</string>
    <string name="location">Location</string>
    <string name="next">Next</string>
    <string name="please_confirm_your_location_nto_proceed">Please confirm your details to proceed</string>
    <string name="landmark">Landmark</string>
    <string name="address">Address</string>
    <string name="please_choose_the_approx_weight_of_your_garbage">Please choose the approx. weight and type of your garbage</string>
    <string name="_91xxxxxxxxx">+91XXXXXXXXX</string>
    <string name="cont">continue</string>
    <string name="please_select_the_types_nof_garbage">Please select the types \nof garbage</string>
    <string name="wet_garbage">Wet Garbage</string>
    <string name="dry_garbage">Dry Garbage</string>
    <string name="medical_dump">Medical Dump</string>
    <string name="hazardous_dump">Hazardous dump</string>
    <string name="pickup_summary">Pickup Summary</string>
    <string name="pickup_location">Pickup location</string>
    <string name="phone_number">Phone Number</string>
    <string name="phonepe">PhonePe</string>
    <string name="paytm">Paytm</string>
    <string name="google_pay">Google Pay</string>
    <string name="upi">UPI</string>
    <string name="your_pickup_has_been_confired_nsit_back_and_relax_our_garbage_ncollector_will_contact_you_soon">Your pickup has been confirmed. Sit back and relax, our garbage collector will contact you soon</string>
    <string name="view">view</string>
    <string name="weight">Weight :</string>
    <string name="amount">Amount :</string>
    <string name="my_orders">My Orders</string>
    <string name="pay_amount">Pay Amount</string>
    <string name="allocate_collector">Allocate Collector</string>
    <string name="your_total_income">Your total income</string>
    <string name="days">days</string>
    <string name="at">at</string>
    <string name="_00">00</string>
    <string name="or">or</string>
    <string name="cancel_pickup">cancel pickup</string>
    <string name="pickup_history">pickup history</string>
    <string name="ward">Ward</string>
    <string name="order_collected_at">Order Collected at</string>
    <string name="buy">Buy</string>
    <string name="plastic">Plastic      (\u20b95/kg)</string>
    <string name="paper">Paper         (\u20b912/kg)</string>
    <string name="other">Other  (\u20b92/kg)</string>

    <string-array name="wards">
        <item>WARD 1</item>
        <item>WARD 2 </item>
        <item>WARD 3</item>
        <item>WARD 4</item>
        <item>WARD 5</item>
        <item>WARD 6</item>
        <item>WARD 7</item>
        <item>WARD 8 </item>
        <item>WARD 9</item>
        <item>WARD 10</item>
        <item>WARD 11</item>
        <item>WARD 12</item>
    </string-array>
</resources>