<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.onboarding.MainActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/questrial"
        android:text="@string/gaarb"
        android:textColor="@color/white"
        android:textSize="50sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Moving towards a cleaner nation"
        android:layout_margin="20dp"
        android:layout_below="@id/head"
        android:fontFamily="@font/questrial"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorPrimary"
        app:cornerRadius="5dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/sign_up"
        android:layout_above="@id/signin"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        android:id="@+id/signup"
        app:rippleColor="@color/black"
        android:textColor="@color/white"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        app:cornerRadius="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:text="@string/sign_in"
        android:id="@+id/signin"
        android:layout_marginBottom="40dp"
        app:rippleColor="@color/black"
        android:textColor="@color/colorPrimary"
        />


</RelativeLayout>